--- a/packages/fluent/scss/panelbar/_layout.scss
+++ b/packages/fluent/scss/panelbar/_layout.scss
@@ -127,11 +127,11 @@
             @for $i from 1 through $kendo-panelbar-item-level-count {
                 &.k-level-#{$i} {
                     .k-link {
-                        padding-inline-start: calc( var( --kendo-panelbar-item-padding-x-start, #{$kendo-panelbar-item-padding-x-start} ) + calc( var( --kendo-padding-x-lg, #{$kendo-padding-x-lg} ) * #{$i} ));
+                        padding-inline-start: calc( var( --kendo-panelbar-item-padding-x-start, #{$kendo-panelbar-item-padding-x-start} ) + ( var( --kendo-padding-x-lg, #{$kendo-padding-x-lg} ) * #{$i} ));
                     }
 
                     .k-panelbar-item-icon:first-child {
-                        inset-inline-start: calc( var( --kendo-panelbar-icon-spacing, #{$kendo-panelbar-icon-spacing} ) + calc( var( --kendo-padding-x-lg, #{$kendo-padding-x-lg} ) * #{$i} ));
+                        inset-inline-start: calc( var( --kendo-panelbar-icon-spacing, #{$kendo-panelbar-icon-spacing} ) + ( var( --kendo-padding-x-lg, #{$kendo-padding-x-lg} ) * #{$i} ));
                     }
                 }
             }
