--- a/packages/fluent/scss/timeline/_variables.scss
+++ b/packages/fluent/scss/timeline/_variables.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @use "../core/color-system" as *;
 @use "../core/_variables.scss" as *;
 @use "../card/_variables.scss" as *;
@@ -33,17 +34,17 @@ $kendo-timeline-mobile-spacing-y: map-get( $kendo-spacing, 4 ) !default;
 
 /// The track arrow width of the timeline.
 /// @group timeline
-$kendo-timeline-track-arrow-width: calc( map-get( $kendo-spacing, 7 ) + map-get( $kendo-spacing, thin ) ) !default;
+$kendo-timeline-track-arrow-width: ( map-get( $kendo-spacing, 7 ) + map-get( $kendo-spacing, thin ) ) !default;
 /// The track arrow height of the timeline.
 /// @group timeline
-$kendo-timeline-track-arrow-height: calc( map-get( $kendo-spacing, 7 ) + map-get( $kendo-spacing, thin ) ) !default;
+$kendo-timeline-track-arrow-height: ( map-get( $kendo-spacing, 7 ) + map-get( $kendo-spacing, thin ) ) !default;
 
 /// The size of the track in the timeline.
 /// @group timeline
-$kendo-timeline-track-size: calc( map-get( $kendo-spacing, 2 ) - map-get( $kendo-spacing, thin ) ) !default;
+$kendo-timeline-track-size: ( map-get( $kendo-spacing, 2 ) - map-get( $kendo-spacing, thin ) ) !default;
 /// The bottom padding of the wrapper of the track in the timeline.
 /// @group timeline
-$kendo-timeline-track-wrap-padding-bottom: calc( ( $kendo-timeline-track-size / 2 ) ) !default;
+$kendo-timeline-track-wrap-padding-bottom: math.div( $kendo-timeline-track-size, 2 ) !default;
 /// The border width of the track in the timeline.
 /// @group timeline
 $kendo-timeline-track-border-width: map-get( $kendo-spacing, hair ) !default;
@@ -81,7 +82,7 @@ $kendo-timeline-track-arrow-disabled-border: var( --kendo-disabled-border, initi
 
 /// The offset of the track event in the timeline.
 /// @group timeline
-$kendo-timeline-track-event-offset: calc( map-get( $kendo-spacing, 10 ) - map-get( $kendo-spacing, 2 ) ) !default;
+$kendo-timeline-track-event-offset: ( map-get( $kendo-spacing, 10 ) - map-get( $kendo-spacing, 2 ) ) !default;
 
 /// The horizontal padding of the flag in the timeline.
 /// @group timeline
@@ -118,10 +119,10 @@ $kendo-timeline-flag-bg: get-theme-color-var( primary-100 ) !default;
 $kendo-timeline-flag-text: var( --kendo-component-bg, initial ) !default;
 /// The width of the flag callout in the timeline.
 /// @group timeline
-$kendo-timeline-flag-callout-width: calc( map-get( $kendo-spacing, 2 ) + map-get( $kendo-spacing, thin ) ) !default;
+$kendo-timeline-flag-callout-width: ( map-get( $kendo-spacing, 2 ) + map-get( $kendo-spacing, thin ) ) !default;
 /// The height of the flag callout in the timeline.
 /// @group timeline
-$kendo-timeline-flag-callout-height: calc( map-get( $kendo-spacing, 2 ) + map-get( $kendo-spacing, thin ) ) !default;
+$kendo-timeline-flag-callout-height: ( map-get( $kendo-spacing, 2 ) + map-get( $kendo-spacing, thin ) ) !default;
 /// The offset bottom of the flag in the timeline.
 /// @group timeline
 $kendo-timeline-flag-offset-bottom: map-get( $kendo-spacing, 1 ) !default;
@@ -150,7 +151,7 @@ $kendo-timeline-card-scroll-thumb-hover: var( --kendo-hover-border, initial ) !d
 $kendo-timeline-date-body-text: var( --kendo-body-text, initial ) !default;
 /// The width of the date in the timeline.
 /// @group timeline
-$kendo-timeline-date-width: calc( map-get( $kendo-spacing, 12 ) + map-get( $kendo-spacing, thin ) ) !default;
+$kendo-timeline-date-width: ( map-get( $kendo-spacing, 12 ) + map-get( $kendo-spacing, thin ) ) !default;
 /// The bottom margin of the date in the timeline.
 /// @group timeline
 $kendo-timeline-date-margin-bottom: map-get( $kendo-spacing, 2 ) !default;
@@ -160,7 +161,7 @@ $kendo-timeline-date-margin-bottom: map-get( $kendo-spacing, 2 ) !default;
 $kendo-timeline-vertical-padding-calc: calc( #{ $kendo-timeline-spacing-x } + ( #{ $kendo-timeline-flag-min-width } - #{ $kendo-timeline-track-size } ) / 2 ) !default;
 /// The padding of the vertical dates timeline.
 /// @group timeline
-$kendo-timeline-vertical-padding-with-dates-calc: calc(#{ $kendo-timeline-vertical-padding-calc } + #{ $kendo-timeline-date-width } ) !default;
+$kendo-timeline-vertical-padding-with-dates-calc: calc( #{ $kendo-timeline-vertical-padding-calc } + #{ $kendo-timeline-date-width } ) !default;
 /// The border radius of the vertical timeline.
 /// @group timeline
 $kendo-timeline-vertical-border-radius: var( --kendo-border-radius-lg, 0 ) !default;
