--- a/packages/fluent/scss/timeselector/_layout.scss
+++ b/packages/fluent/scss/timeselector/_layout.scss
@@ -74,7 +74,7 @@
         border-style: solid;
         box-sizing: border-box;
         position: absolute;
-        top: calc( 50% + var( --kendo-time-list-title-height, $kendo-time-list-title-height ) / 2);
+        top: calc( 50% + var( --kendo-time-list-title-height, #{$kendo-time-list-title-height} ) / 2);
         left: 0;
         right: 0;
         transform: translateY(-50%);
@@ -114,14 +114,14 @@
                 width: 100%;
                 left: 0;
                 pointer-events: none;
-                height: calc( 50% - calc( var( --kendo-time-list-highlight-height, $kendo-time-list-highlight-height ) / 2) );
+                height: calc( 50% - ( var( --kendo-time-list-highlight-height, #{$kendo-time-list-highlight-height} ) / 2) );
                 box-sizing: border-box;
                 border-width: 0;
                 border-style: solid;
             }
 
             &::before {
-                top: calc( var( --kendo-time-list-title-spacing, $kendo-time-list-title-spacing ) + var( --kendo-time-list-title-height, $kendo-time-list-title-height ) );
+                top: calc( var( --kendo-time-list-title-spacing, #{$kendo-time-list-title-spacing} ) + var( --kendo-time-list-title-height, #{$kendo-time-list-title-height} ) );
             }
 
             &::after {
@@ -202,7 +202,7 @@
         align-items: center;
         position: relative;
         z-index: 11;
-        top: calc( var( --kendo-time-list-title-height, $kendo-time-list-title-height ) / 2);
+        top: calc( var( --kendo-time-list-title-height, #{$kendo-time-list-title-height} ) / 2);
     }
 
 
