--- a/packages/fluent/scss/chat/_layout.scss
+++ b/packages/fluent/scss/chat/_layout.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @use "_variables.scss" as *;
 @use "../core/color-system" as *;
 @use "../core/mixins" as *;
@@ -457,4 +458,3 @@
     }
 
 }
-
