--- a/packages/fluent/scss/core/_variables.scss
+++ b/packages/fluent/scss/core/_variables.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @use "sass:meta";
 
 // Options
@@ -64,7 +65,7 @@ $kendo-font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helv
 
 
 /// Line height used along with $font-size.
-$kendo-line-height: calc( 20 / 14 ) !default;
+$kendo-line-height: math.div( 20, 14 ) !default;
 $kendo-line-height-xs: 1 !default;
 $kendo-line-height-sm: 1.25 !default;
 $kendo-line-height-md: $kendo-line-height !default;
@@ -83,17 +84,17 @@ $default-scrollbar-width: 17px !default;
 
 /// Border radius for all components.
 $kendo-border-radius: map-get( $kendo-spacing, thin ) !default;
-$kendo-border-radius-sm: calc( #{$kendo-border-radius} / 2 ) !default;
+$kendo-border-radius-sm: math.div( $kendo-border-radius, 2 ) !default;
 $kendo-border-radius-md: $kendo-border-radius !default;
-$kendo-border-radius-lg: calc( #{$kendo-border-radius} * 2 ) !default;
+$kendo-border-radius-lg: ( $kendo-border-radius * 2 ) !default;
 
 // Metrics
 $kendo-padding-x: map-get( $kendo-spacing, 2 ) !default;
 $kendo-padding-y: map-get( $kendo-spacing, 1 ) !default;
-$kendo-padding-x-sm: calc( #{$kendo-padding-x} / 2) !default;
-$kendo-padding-y-sm: calc( #{$kendo-padding-y} / 2) !default;
-$kendo-padding-x-lg: calc( #{$kendo-padding-x} * 1.5) !default;
-$kendo-padding-y-lg: calc( #{$kendo-padding-y} * 1.5) !default;
+$kendo-padding-x-sm: math.div( $kendo-padding-x, 2) !default;
+$kendo-padding-y-sm: math.div( $kendo-padding-y, 2) !default;
+$kendo-padding-x-lg: ( $kendo-padding-x * 1.5) !default;
+$kendo-padding-y-lg: ( $kendo-padding-y * 1.5) !default;
 
 // Default transition
 $kendo-transition: color .2s ease-in-out, background-color .2s ease-in-out, border-color .2s ease-in-out, box-shadow .2s ease-in-out, opacity .2s ease-in-out, width .2s ease-in-out, height .2s ease-in-out !default;
